[tool.poetry]
name = "sw_characters"
version = "0.1.0"
description = "some cli for swapi"
authors = ["Alexandr Efimov <zed-chi@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
